# tree-sitter-merlin6502

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README-crate.md  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.js  tree-sitter.json
.github/: README.md
.github/workflows/: rust.yml
bindings/c/: tree-sitter-merlin6502.h  tree-sitter-merlin6502.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_merlin6502/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
script/: build.py  grammar-src.js  linker_opcodes.yml  opcode_processor.py  opcodes.json  opcodes.md  opcodes.yml  pseudo_opcodes.json  pseudo_opcodes.yml
src/: grammar.json  node-types.json  parser.c
test/: README.md  comments.S  helloworld.S
test/corpus/: addressing-modes.txt  branching-jumping.txt  emulation.txt  files.txt  forced-addressing.txt  macros.txt  pseudo-ops-16plus.txt  pseudo-ops-asm.txt  pseudo-ops-conditionals.txt  pseudo-ops-data.txt  pseudo-ops-formatting.txt  pseudo-ops-misc.txt  pseudo-ops-string-data.txt
test/highlight/: test.S
